--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 <!-- banner section -->
 <div class="main">
-    <div class='banner'>
-      <img src='resources/images/banner.jpg'/>
+    <div class='banner role='presentation''>
+      <img src='resources/images/banner.jpg' alt='banner'/>
       <div class="support">
         <h1>Learn something</br> new everyday</h1>
         <h2>Lorem ipsum dolor sit amet,</br> consectetur adipiscing elit.</h2>
@@ -48,9 +48,9 @@
 
 <!-- banner info section -->
 
-    <div class='banner info'>
+    <div class='banner info' role='presentation'>
       <div class='imgcnt first'>
-          <img src='resources/images/information-main.jpg'/>
+          <img src='resources/images/information-main.jpg' alt="information"/>
           <h1>It doesn't hurt to keep practicing</h1>
           <h3>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,
           nec consequat neque. Sed non accusam urna. Phasellus sed consequat ex. Etiam
@@ -58,15 +58,15 @@
           <p>Emanuel, Sr Strategist at Hiring.com </p>
           <div class='mobile'>
             <a href='https://en.wikipedia.org/wiki/Colmar' target='_blank'><img src='resources/images/ic-logo.svg'/></a>
-            <img src='resources/images/hover.png' id='hover'/>
+            <img src='resources/images/hover.png' id='hover' alt=''/>
           </div>
       </div>
 
 
-      <div class="support">
+      <div class="support" role='presentation'>
 
         <div class='short' id='orientation'>
-          <img src='resources/images/information-orientation.jpg'/>
+          <img src='resources/images/information-orientation.jpg' alt='information-orientation'/>
           <div class="txt">
             <h2>Orientation date</h2>
             <h3>Tue 10/11 & Wed 10/12: 8am-3pm</h3>
@@ -75,7 +75,7 @@
         </div>
 
         <div class='short' id='campus'>
-          <img src='resources/images/information-campus.jpg'/>
+          <img src='resources/images/information-campus.jpg' alt='campus'/>
           <div class="txt">
             <h2>Our campus</h2>
             <h3>Find which campus is close by you</h3>
@@ -84,7 +84,7 @@
         </div>
 
         <div class='short' id='guest'>
-          <img src='resources/images/information-guest-lecture.jpg'/>
+          <img src='resources/images/information-guest-lecture.jpg' alt='guest lecture'/>
           <div class="txt">
             <h2>Our guest lecture</h2>
             <h3>Join a keynote with Oliver Sack,</br>
@@ -94,10 +94,10 @@
         </div>
   </div>
 
-        <div class="micro">
+        <div class="micro" role='presentation'>
 
           <div class='short' id='orientation'>
-            <img src='resources/images/information-orientation-mobile.jpg'/>
+            <img src='resources/images/information-orientation-mobile.jpg' alt='orientation'/>
             <div class="txt">
               <h2>Orientation date</h2>
               <h3>Tue 10/11 & Wed 10/12: 8am-3pm</h3>
@@ -106,7 +106,7 @@
           </div>
 
           <div class='short' id='campus'>
-            <img src='resources/images/information-campus-mobile.jpg'/>
+            <img src='resources/images/information-campus-mobile.jpg' alt='campus'/>
             <div class="txt">
               <h2>Our campus</h2>
               <h3>Find which campus is close by you</h3>
@@ -115,7 +115,7 @@
           </div>
 
           <div class='short' id='guest'>
-            <img src='resources/images/information-guest-lecture-mobile.jpg'/>
+            <img src='resources/images/information-guest-lecture-mobile.jpg' alt='guest lecture'/>
             <div class="txt">
               <h2>Our guest lecture</h2>
               <h3>Join a keynote with Oliver Sack,</br>
@@ -136,10 +136,10 @@
     <div class='gallery'>
       <h1>Start learning</h1>
 
-      <div class='flex container'>
+      <div class='flex container role='presentation''>
 
         <div class='flex element'>
-            <img src='resources/images/course-software.jpg'/>
+            <img src='resources/images/course-software.jpg' alt='software course'/>
           <div class="text">
             <h2>Software engineering</h2>
             <h3>Courses</h3>
@@ -148,7 +148,7 @@
         </div>
 
         <div class='flex element'>
-            <img src='resources/images/course-computer-art.jpg'/>
+            <img src='resources/images/course-computer-art.jpg' alt='computer art course'/>
           <div class="text">
             <h2>Computer art</h2>
             <h3>Courses</h3>
@@ -157,7 +157,7 @@
         </div>
 
         <div class='flex element'>
-            <img src='resources/images/course-design.jpg'/>
+            <img src='resources/images/course-design.jpg'/ alt='design course'>
           <div class="text">
             <h2>Design</h2>
             <h3>Courses</h3>
@@ -166,7 +166,7 @@
         </div>
 
         <div class='flex element'>
-            <img src='resources/images/course-data.jpg'/>
+            <img src='resources/images/course-data.jpg' alt='data course'/>
           <div class="text">
             <h2>Data</h2>
             <h3>Courses</h3>
@@ -175,7 +175,7 @@
         </div>
 
         <div class='flex element'>
-            <img src='resources/images/course-business.jpg'/>
+            <img src='resources/images/course-business.jpg' alt='business course'/>
           <div class="text">
             <h2>Business</h2>
             <h3>Courses</h3>
@@ -184,7 +184,7 @@
         </div>
 
         <div class='flex element'>
-            <img src='resources/images/course-marketing.jpg'/>
+            <img src='resources/images/course-marketing.jpg' alt='marketing course'/>
           <div class="text">
             <h2>Marketing</h2>
             <h3>Courses</h3>
@@ -222,11 +222,11 @@
       <h1>Thesis exhibit</h1>
 
 
-        <div class="banner info">
+        <div class="banner info" role='presentation'>
 
 
           <div class="imgcnt">
-            <video autoplay loop muted src="resources/videos/thesis.mp4"> </video>
+            <video autoplay loop muted src="resources/videos/thesis.mp4">Your browser does not support the video tag.</video>
             <h2>Reimagine urban</h2>
             <h3>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,</br>
               nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget</br>
@@ -236,7 +236,7 @@
           <div class="support">
 
             <div class='short' id='fisma'>
-              <img src='resources/images/thesis-fisma.jpg'/>
+              <img src='resources/images/thesis-fisma.jpg' alt='thesis'/>
               <div class="txt">
                 <h2>Fisma: Design and</br> prototype</h2>
                 <h3>Designer showcase of new</br> prototype product</h3>
@@ -244,7 +244,7 @@
             </div>
 
             <div class='short' id='now'>
-              <img src='resources/images/thesis-now-and-then.jpg'/>
+              <img src='resources/images/thesis-now-and-then.jpg' alt='now and then'/>
               <div class="txt">
                 <h2>Now and then</h2>
                 <h3>Research study about New York</h3>
